test/core/errors/parameterized_types_error/zs/no_arguments_error.zs
package no_arguments_error;

struct Parameterized(int32 param)
{
    int32 arr[param];
};

struct NoArguments
{
    Parameterized() parameterized;
};
